Tag view, and overflow fixes

--- a/admin/code/css/SideBar.css
+++ b/admin/code/css/SideBar.css
@@ -193,11 +193,6 @@
     cursor: pointer;
 }
 
-/*
-#apollo_page_list {
-	background-color: yellow;
-}
-*/
 /* Folder Pop-up context menu /////////////////////////// */
 
 #SideBar .rightClickMenu {
